@@ -1,3 +1,8 @@
+2005-02-02  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* Makefile.in: Remove use of cc_set_by_configure; just use
+	plain old CC from the top level in this case.
+
 2005-01-29  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	Merge from mainline.  Changes to mainline gcc/ada/Makefile.in
